- Files will be sorted by filesize correctly
- Reminders can be removed from a task
- Calendar: Fixed problem with strtotime and the YYYY.MM.DD date format in the recurrence pattern calculation
- When renaming a mailbox folder the current name will display in the dialog
- Expunged email will be removed just before store load again
- Users: Admin's Users Grid: sort order of name now according to current user's settings.
- Bookmarks: URL validation in Bookmark URLs extended to also allow URLs like https://wiki:username@wiki.mydomain.org
- Custom fields: Future encrypted Custom Fields become TEXT fields in database.
- Projects: Tags like {project:name} and {project:path} now available for the Name and Description fields of Project Template Actions.

31-07-2014 5.0.75
- Fixed wrong language problem on the login page error messages.
- Error when saving contact without a company

30-07-2014 5.0.74
- Fixed notice
- Address book: Added sanity check: Contact's company must be in same address book as the contact.

29-07-2014 5.0.73
- Calendar: Fixed problem in IE10 when loading the 1day, 5days and 7days grid.
- Added configuration variable to enable/disable encoding of the callto link.($config['encode_callto_link'] = false;)
- Sieve & E-mail: More specific 'sieve not used' note in email account: filter tab.
- Calendar: Fix for not displaying a multiday event on the last day when the endtime is set to 0:00
- Addressbook: Fixed problem with using the import dialog for the 2nd time.

18-07-2014 5.0.72
- Project in billing selectable for v1 and v2.
- Removed the ability to delete the items that are marked as default in the settings->synchronization tab.

17-07-2014 5.0.71
- Billing: Fixed sql problems with order when a project is attached and then projects2 isn't installed.
- Prevent timeout on module permission window
- Added new config option $config['files_disable_filesystem_sync']=true;
  The automatic sync can cause timeouts on large installations and should not be